fix so that buttons on profile don't wrap for users with high image / fav counts

--- a/css/main.css
+++ b/css/main.css
@@ -4054,6 +4054,9 @@ a.ui-link-inherit {
   left: 4px;
   top: 20px;
 }
+.user-profile .user-buttons {
+  white-space: nowrap;
+}
 /*
 * @uploading - PAGE
 */
