--- a/css/pages.less
+++ b/css/pages.less
@@ -871,6 +871,9 @@
             }
         }
     }
+    .user-buttons{
+        white-space: nowrap;
+    }
 }
 
 /*
